--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
   --bs-red: #a16468;
   --bs-orange: #fd7e14;
   --bs-yellow: #e4c662;
-  --bs-green: #67c29c;
+  --bs-green: grey;
   --bs-teal: #343a40;
   --bs-cyan: #1cabc4;
   --bs-white: #fff;
@@ -35,7 +35,7 @@
   --bs-gray-900: #212529;
   --bs-primary: #343a40;
   --bs-secondary: #7464a1;
-  --bs-success: #67c29c;
+  --bs-success: grey;
   --bs-info: #1cabc4;
   --bs-warning: #e4c662;
   --bs-danger: #a16468;
@@ -243,7 +243,7 @@ a {
   text-decoration: underline;
 }
 a:hover {
-  color: #50817e;
+  color: grey;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2822,7 +2822,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #67c29c;
+  color: grey;
 }
 
 .valid-tooltip {
@@ -2847,7 +2847,7 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #67c29c;
+  border-color: grey;
   padding-right: calc(1.5em + 0.75rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2367c29c' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
@@ -2855,7 +2855,7 @@ textarea.form-control-lg {
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #67c29c;
+  border-color: grey;
   box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.25);
 }
 
@@ -2865,7 +2865,7 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
-  border-color: #67c29c;
+  border-color: grey;
 }
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
@@ -2874,21 +2874,21 @@ textarea.form-control-lg {
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
-  border-color: #67c29c;
+  border-color: grey;
   box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.25);
 }
 
 .was-validated .form-check-input:valid, .form-check-input.is-valid {
-  border-color: #67c29c;
+  border-color: grey;
 }
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: #67c29c;
+  background-color: grey;
 }
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
   box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.25);
 }
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #67c29c;
+  color: grey;
 }
 
 .form-check-inline .form-check-input ~ .valid-feedback {
@@ -3040,17 +3040,17 @@ textarea.form-control-lg {
 .btn-primary:hover {
   color: #fff;
   background-color: #558985;
-  border-color: #50817e;
+  border-color: grey;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
   background-color: #558985;
-  border-color: #50817e;
+  border-color: grey;
   box-shadow: 0 0 0 0.25rem rgba(123, 175, 172, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #50817e;
+  background-color: grey;
   border-color: #4b7976;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
@@ -3094,32 +3094,32 @@ textarea.form-control-lg {
 
 .btn-success {
   color: #000;
-  background-color: #67c29c;
-  border-color: #67c29c;
+  background-color: grey;
+  border-color: grey;
 }
 .btn-success:hover {
   color: #000;
-  background-color: #7ecbab;
-  border-color: #76c8a6;
+  background-color: grey;
+  border-color: grey;
 }
 .btn-check:focus + .btn-success, .btn-success:focus {
   color: #000;
-  background-color: #7ecbab;
-  border-color: #76c8a6;
+  background-color: grey;
+  border-color: grey;
   box-shadow: 0 0 0 0.25rem rgba(88, 165, 133, 0.5);
 }
 .btn-check:checked + .btn-success, .btn-check:active + .btn-success, .btn-success:active, .btn-success.active, .show > .btn-success.dropdown-toggle {
   color: #000;
   background-color: #85ceb0;
-  border-color: #76c8a6;
+  border-color: grey;
 }
 .btn-check:checked + .btn-success:focus, .btn-check:active + .btn-success:focus, .btn-success:active:focus, .btn-success.active:focus, .show > .btn-success.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(88, 165, 133, 0.5);
 }
 .btn-success:disabled, .btn-success.disabled {
   color: #000;
-  background-color: #67c29c;
-  border-color: #67c29c;
+  background-color: grey;
+  border-color: grey;
 }
 
 .btn-info {
@@ -3383,27 +3383,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-success {
-  color: #67c29c;
-  border-color: #67c29c;
+  color: grey;
+  border-color: grey;
 }
 .btn-outline-success:hover {
   color: #000;
-  background-color: #67c29c;
-  border-color: #67c29c;
+  background-color: grey;
+  border-color: grey;
 }
 .btn-check:focus + .btn-outline-success, .btn-outline-success:focus {
   box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.5);
 }
 .btn-check:checked + .btn-outline-success, .btn-check:active + .btn-outline-success, .btn-outline-success:active, .btn-outline-success.active, .btn-outline-success.dropdown-toggle.show {
   color: #000;
-  background-color: #67c29c;
-  border-color: #67c29c;
+  background-color: grey;
+  border-color: grey;
 }
 .btn-check:checked + .btn-outline-success:focus, .btn-check:active + .btn-outline-success:focus, .btn-outline-success:active:focus, .btn-outline-success.active:focus, .btn-outline-success.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.5);
 }
 .btn-outline-success:disabled, .btn-outline-success.disabled {
-  color: #67c29c;
+  color: grey;
   background-color: transparent;
 }
 
@@ -3588,7 +3588,7 @@ textarea.form-control-lg {
   text-decoration: underline;
 }
 .btn-link:hover {
-  color: #50817e;
+  color: grey;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -4066,7 +4066,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #50817e;
+  color: grey;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -4930,13 +4930,13 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #50817e;
+  color: grey;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #50817e;
+  color: grey;
   background-color: #e9ecef;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(100, 161, 157, 0.25);
@@ -6596,7 +6596,7 @@ textarea.form-control-lg {
   color: #343a40;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #50817e;
+  color: grey;
 }
 
 .link-secondary {
@@ -6607,7 +6607,7 @@ textarea.form-control-lg {
 }
 
 .link-success {
-  color: #67c29c;
+  color: grey;
 }
 .link-success:hover, .link-success:focus {
   color: #85ceb0;
@@ -7068,7 +7068,7 @@ textarea.form-control-lg {
 }
 
 .border-success {
-  border-color: #67c29c !important;
+  border-color: grey !important;
 }
 
 .border-info {
@@ -11562,7 +11562,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/Image\(4\).jpeg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/8726626639b3dcb16490280298b34884.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11641,7 +11641,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/Image.jpeg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/outro.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
